# libsaydx

./: .gitignore  CMakeLists.txt  README.rst
lib/: CMakeLists.txt  array.c  array.h  commontypes.c  commontypes.h  eventhandler.h  eventprinter.c  eventprinter.h  msdparser.c  msdparser.h  node.c  node.h  query.c  query.h  treebuilder.c  treebuilder.h  treewalker.c  treewalker.h
lib/api/c/: CMakeLists.txt  saydx.h
lib/api/fortran/: CMakeLists.txt  array.f90  ciface.f90  cinterop.f90  common.f90  commontypes.f90  eventhandler.f90  eventprinter.f90  msdparser.f90  node.f90  query.f90  saydx.f90  treebuilder.f90
lib/core/: CMakeLists.txt  array.c  array.h  commontypes.c  commontypes.h  deserializer.c  deserializer.h  eventhandler.c  eventhandler.h  eventprinter.c  eventprinter.h  msdparser.c  msdparser.h  node.c  node.h  query.c  query.h  saydx.c  serialize.c  serialize.h  serializer.c  serializer.h  treebuilder.c  treebuilder.h  treepacker.c  treepacker.h  treeunpacker.c  treeunpacker.h  treewalker.c  treewalker.h  txtdeserializer.c  txtdeserializer.h  txtserializer.c  txtserializer.h
test/: CMakeLists.txt  test1.c  test1.msd  test1f.f90  test2.c  test2.msd  test2f.f90  test3.c
